<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/nav_courses" />
    <item
        android:id="@+id/nav_forum"
        android:icon="@drawable/ic_forum"
        android:title="@string/nav_forum" />
    <item
        android:id="@+id/nav_my_learning"
        android:icon="@drawable/ic_my_learning"
        android:title="@string/nav_my_learning" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
